[package]
name = "kvs"
author = ["thexia <xiayu1187@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[lib]
test = false

[[bin]]
name = "kvs"
test = false

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
