[package]
name = "kvs"
version = "0.1.0"
authors = ["Yilin Chen <sticnarf@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
structopt = "0.2.15"
thiserror = "1.0.50"
serde = "1.0.192" 
serde_derive = "1.0.192" 
serde_json = "1.0.108"
log = "0.4.6"
env_logger = "0.10.1"
sled = "0.34.7"
anyhow = "1.0.75"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.5.1"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"
